// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders execution 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button bp3-disabled"
                disabled={true}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                tabIndex={-1}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-fhYwyz hyOOJg"
        >
          <a
            className="active sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            className="sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="sc-hmzhuo ftuAGc"
  >
    <div
      className="sc-frDJqD fJvFGP"
    >
      <div
        className="bp3-non-ideal-state"
      >
        <div
          className="bp3-non-ideal-state-visual"
        >
          <span
            className="bp3-icon bp3-icon-error"
            icon="error"
          >
            <svg
              data-icon="error"
              height={60}
              viewBox="0 0 20 20"
              width={60}
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <h4
          className="bp3-heading"
        >
          GraphQL Error - see console for details
        </h4>
      </div>
    </div>
  </div>,
]
`;

exports[`renders pipeline page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;

exports[`renders pipeline solid page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button bp3-disabled"
                disabled={true}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                tabIndex={-1}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-fhYwyz hyOOJg"
        >
          <a
            className="active sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            className="sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="sc-hmzhuo ftuAGc"
  >
    <div
      className="sc-frDJqD fJvFGP"
    >
      <div
        className="bp3-non-ideal-state"
      >
        <div
          className="bp3-non-ideal-state-visual"
        >
          <span
            className="bp3-icon bp3-icon-error"
            icon="error"
          >
            <svg
              data-icon="error"
              height={60}
              viewBox="0 0 20 20"
              width={60}
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <h4
          className="bp3-heading"
        >
          GraphQL Error - see console for details
        </h4>
      </div>
    </div>
  </div>,
]
`;

exports[`renders type page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button bp3-disabled"
                disabled={true}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                tabIndex={-1}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-fhYwyz hyOOJg"
        >
          <a
            className="active sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            className="sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="sc-hmzhuo ftuAGc"
  >
    <div
      className="sc-frDJqD fJvFGP"
    >
      <div
        className="bp3-non-ideal-state"
      >
        <div
          className="bp3-non-ideal-state-visual"
        >
          <span
            className="bp3-icon bp3-icon-error"
            icon="error"
          >
            <svg
              data-icon="error"
              height={60}
              viewBox="0 0 20 20"
              width={60}
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <h4
          className="bp3-heading"
        >
          GraphQL Error - see console for details
        </h4>
      </div>
    </div>
  </div>,
]
`;

exports[`renders type page 2`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button bp3-disabled"
                disabled={true}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                tabIndex={-1}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-fhYwyz hyOOJg"
        >
          <a
            className="active sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            className="sc-jzgbtB eOzMkI"
            href="/p/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="sc-hmzhuo ftuAGc"
  >
    <div
      className="sc-frDJqD fJvFGP"
    >
      <div
        className="bp3-non-ideal-state"
      >
        <div
          className="bp3-non-ideal-state-visual"
        >
          <span
            className="bp3-icon bp3-icon-error"
            icon="error"
          >
            <svg
              data-icon="error"
              height={60}
              viewBox="0 0 20 20"
              width={60}
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <h4
          className="bp3-heading"
        >
          GraphQL Error - see console for details
        </h4>
      </div>
    </div>
  </div>,
]
`;

exports[`renders without error 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          alt="logo"
          src={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                style={
                  Object {
                    "justifyContent": "space-between",
                    "minWidth": 230,
                  }
                }
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <a
        className="sc-jzgbtB eOzMkI"
        href="/runs"
        onClick={[Function]}
      >
        Runs
      </a>
      <a
        className="sc-jzgbtB eOzMkI"
        href="/scheduler"
        onClick={[Function]}
      >
        Schedule
      </a>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-bwzfXH iUsTio"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span />
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;
